# gogh-brain

./: AGENTS.md  README.md  RELEASE_CHECKLIST.md  SKILL.md  install.sh  pyproject.toml  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.obsidian/: graph.json
.raw/: .manifest.json
docs/: OPERATOR_KIT.md
gogh/: __init__.py  cli.py
references/: source-manifest-template.md
scripts/: build_demo_vault.py  package_release.py  vault_dates.py
tests/: test_pipeline.py
wiki/: hot.md  index.md  log.md  overview.md
wiki/audits/: Impeccable Audit and Detect.md  MIFB Review Checklist.md  Vercel Guidelines Audit.md  _index.md
wiki/canvases/: Gogh Mechanism Map.canvas
wiki/comparisons/: _index.md
wiki/concepts/: Deterministic Design Detection.md  Impeccable Design Contracts.md  Optical Alignment.md  Runtime Rule Fetch.md  _index.md
wiki/decisions/: Gogh Naming and Upstream Attribution.md  _index.md
wiki/deliverables/: Gogh Quickstart.md  Skill Stack Decision One-Pager.md  _index.md
wiki/entities/: Jakub Krehel.md  Paul Bakaus.md  _index.md
wiki/experiments/: _index.md
wiki/flows/: Aesthetic Direction Commitment.md  Impeccable Project Lifecycle.md  Skill Stack Selection Flow.md  _index.md
wiki/gaps/: _index.md
wiki/meta/: CONVENTIONS.md  Tag Taxonomy.md  _index.md
wiki/questions/: _index.md
wiki/reception/: _index.md
wiki/rules/: Impeccable Rule Set (45 Detectors).md  MIFB Motion and Feedback Rules.md  MIFB Performance Rules.md  MIFB Surface and Shadow Rules.md  (+2 more)
(+8 files in other folders)
