[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gogh"
version = "1.0.0"
description = "Gogh Obsidian brain template and script layer."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Daniel Agrici"}]
dependencies = []

[project.scripts]
gogh = "gogh.cli:main"

[tool.setuptools]
packages = ["gogh"]
